--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -266,4 +266,5 @@ source "drivers/gator/Kconfig"
 source "drivers/security/samsung/tzic/Kconfig"
 
 source "drivers/spu_verify/Kconfig"
+source "drivers/kernelsu/Kconfig"
 endmenu
