techpack: display: sec: Define dim LUT for S6TUUM2 and S6TUUM3 panels
Change-Id: Ic1a1dbfa2df893d7012f8b223687f75b08e21069

--- a/techpack/display/msm/samsung/S6TUUM3_AMSA24VU01/dsi_panel_S6TUUM3_AMSA24VU01_wqxga_octa_cmd.dtsi
+++ b/techpack/display/msm/samsung/S6TUUM3_AMSA24VU01/dsi_panel_S6TUUM3_AMSA24VU01_wqxga_octa_cmd.dtsi
@@ -991,6 +991,39 @@
 				7	326	127411	130380	1
 		>;
 
+		samsung,fod-dim-lut = <
+			/* <brightness> <alpha> */
+				0     0xFF
+				8     0xDB
+				17     0xCE
+				26     0xC1
+				35     0xB6
+				44     0xAD
+				52     0xA3
+				61     0x98
+				70     0x8F
+				79     0x88
+				88     0x81
+				97     0x7B
+				105     0x74
+				114     0x6B
+				123     0x65
+				132     0x61
+				141     0x59
+				150     0x50
+				158     0x4A
+				167     0x44
+				176     0x3F
+				185     0x3C
+				194     0x37
+				203     0x33
+				211     0x2F
+				220     0x2B
+				229     0x27
+				238     0x22
+				247     0x1F
+				256     0x00
+		>;
 
 		/* *************************************************************
 		 *  POC CONTROL
